[project]
name = "meal-voucher"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "cryptography>=49.0.0",
    "fastapi>=0.138.0",
    "httpx>=0.28.1",
    "pillow>=12.2.0",
    "pydantic-settings>=2.14.2",
    "redis>=8.0.0",
    "uvicorn>=0.49.0",
]
